# nocsim

./: .gitignore  .travis.yml  BEMfile  CHANGELOG.md  LICENSE  Makefile  README.md  configure  configure.in  debugtest.tcl  first.py  index.html  sample.tcl  sample.txt  style.css
.circleci/: config.yml
common/: constants.h  util.h
doc/: TCL.md  noc-tools.md  nocsim.md  nocviz.md
etc/: tcl.supp
examples/: benchmark.tcl  colordemo.tcl  demo.tcl  mesh_DOR.tcl  mesh_DOR_visualization.tcl  simple.tcl
gui/: .gitignore  Makefile  Makefile.config  README.md  configure  configure.in  small.tcl
gui/mk/: README.txt
gui/src/: grid.c  khash.h  main.c  map.h  nocsim.h  nocsim_constants.h  nocsim_types.h  simulation.c  vec.c  vec.h
noc-tools/: '  .gitignore  Makefile  Makefile.config  README.md  configure  configure.in  configure.lua
noc-tools/common/: constants.h  util.h
noc-tools/doc/: nocviz.md
noc-tools/mk/: build.lib.mk
noc-tools/nocsim/: README.md  nocsim.h  nocsim_types.h  util.c
noc-tools/nocsim/tests/: all_adjacent.tcl  backroute.tcl  basic.tcl  dir2list.tcl  inject.tcl  link.tcl  link_overwrite.tcl  route.tcl  tcl.supp
noc-tools/nocviz/: Makefile  commands.c  commands.h  datastore.c  datastore.h  graph.c  graph.h  graph_widget.c  gui.c  gui.h  link_command.c  nocviz.c  nocviz.h  nocviz_commands.c  nocviz_commands.h  nocviz_node_command.c  node_command.c  operations.c  operations.h  text_widget.c  text_widget.h
noc-tools/nocviz/tests/: README.md  datastore.test.c  graph.test.c  link.test.c  node.test.c  operations.test.c  run_tests.sh  tcl.supp  test_util.h
nocsim/: Makefile  cli.py  grid.c  interp.c  metrics.py  nocsim.c  nocsim_package.tcl  nocsim_tclutils.tcl  nocsim_types.h  packet.py  router.py  simulation.py
nocsim/tests/: README.md  all_adjacent.tcl  allnodes.tcl  avail.tcl  backroute.tcl  basic.tcl  current.tcl  dir2list.tcl  findnode.tcl  inject.tcl  link.tcl  link_instrument.tcl  link_overwrite.tcl  linkinfo.tcl  lremove.tcl  node.tcl  node_instrument.tcl  peek.tcl  route.tcl  router_backlog.tcl  run_tests.sh
nocviz/: Makefile  commands.c  commands.h  datastore.c  datastore.h  graph.c  graph.h  graph_logic.c  graph_widget.c  graph_widget.h  gui.c  gui.h  link_command.c  nocviz.c  nocviz.h  nocviz_color.tcl  nocviz_package.tcl  node_command.c  operations.h  text_widget.c  text_widget.h
nocviz/tests/: README.md  data.test.c  datastore.test.c  operations.test.c  run_tests.sh
scripts/: Dockerfile  README.md  build_figures.sh  ci.sh  circleci_install_deps.sh  evalstats.py  gengrid.py  getheaders.awk  hub.py  noc_tools_load.tcl  nocsim_load.tcl  packetstats.awk  stats.awk  util.lib  validate.awk
scripts/ci/: build.sh  complexity.sh  lint.sh  lizard.sh  sample.sh  tcl.supp  unittest.sh  valgrind.sh  version.sh
scripts/ci/unittest/: all_adjacent.tcl  allnodes.tcl  avail.tcl  backroute.tcl  basic.tcl  current.tcl  dir2list.tcl  findnode.tcl  inject.tcl  link.tcl  link_overwrite.tcl  linkinfo.tcl  lremove.tcl  node.tcl  peek.tcl  route.tcl
scripts/figures/: mean_age.sh  mean_hops.sh  mean_pending.sh  mean_pending_slope.sh  mean_throughput.sh  median_age.sh  median_hops.sh  median_throughput.sh
src/: behaviors.c  grid.c  interp.c  nocsim  nocsim.c  nocsim.h  nocsim_types.h  simulation.c  util.c  vec.h
src/nocsim_tcl/: NocsimTCL.tcl  README.md
