#
# Typical configure script source for an Agar application using the
# BSDBuild build system.
#
# To generate the configure script from this file, install BSDBuild
# on your system (download it from http://hypertriton.com/bsdbuild),
# and execute:
#
#     $ cat configure.in |mkconfigure > configure
#

# Name and version of the application.
PACKAGE("nocsim-gui")
VERSION("2.0.0")

# Register our configure options.
REGISTER("--with-agar[=PREFIX]", "Agar installation path [default: auto]")
REGISTER("--with-tcl[=PREFIX]", "TCL installation path [default: auto]")
REGISTER("--enable-debugger", "Enable Agar debugger - requires libagar to be built with support for debugging [default: no]")
REGISTER("--enable-devmode", "Enable generation of debugging symbols and other development features [default: no]")
REGISTER("--enable-werror", "Treat all compiler warnings as errors [default: no]")

# Require a C compiler.
REQUIRE(cc)

# Require at least Agar 1.6.0.
REQUIRE(agar, 1.6.0, ${prefix_agar})

if [ -z "$with_tcl" ] ; then
	REQUIRE(tcl, 8.6.0)
else
	MDEFINE(TCL_CFLAGS, "-I$with_tcl")
	MDEFINE(TCL_LIBS, "-ltcl -ltclstub")
fi

# Require other Agar-based libraries.
#REQUIRE(agar-vg, 1.5.0, ${prefix_agar})
#REQUIRE(agar-dev, 1.5.0, ${prefix_agar})
#REQUIRE(agar-math, 1.5.0, ${prefix_agar})

# Import standard routines provided by Agar (without "AG"_ prefix).
#C_DEFINE(_USE_AGAR_STD)
#C_DEFINE(_USE_AGAR_CORE)
#C_DEFINE(_USE_AGAR_QUEUE)
#C_DEFINE(_USE_AGAR_GUI)
#C_DEFINE(_USE_AGAR_TYPES)
#C_DEFINE(_USE_AGAR_MATH)

if [ "${enable_debugger}" = "yes" ] ; then
	MDEFINE(CFLAGS, "$CFLAGS -DENABLE_DEBUGGER")
fi

MDEFINE(CFLAGS, "$CFLAGS -Wall -Wextra -pedantic")
if [ "${enable_devmode}" = "yes" ] ; then
	MDEFINE(CFLAGS, "$CFLAGS -DEBUG")
	MDEFINE(CFLAGS, "$CFLAGS -Og -g")
else
	MDEFINE(CFLAGS, "$CFLAGS -O3")
fi

if [ "${enable_werror}" = "yes" ] ; then
	MDEFINE(CFLAGS, "$CFLAGS -Werror")
fi
